# django-livecomponents-example

./: .gitignore  README.md  pyproject.toml
demo/: settings.py  urls.py
property/: admin.py  models.py  views.py
property/components/: forms.py
property/components/card/: card.html  card.py
property/components/create/: create.html  create.py
property/components/edit/: edit.html  edit.py
property/components/grid/: grid.html  grid.py
property/components/search/: search.html  search.py
property/migrations/: 0001_initial.py  0002_seed_sample_properties.py
property/templates/property/: base.html  index.html
